--- a/TodoApi/TodoApi/Properties/launchSettings.json
+++ b/TodoApi/TodoApi/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "api/todoitems",
-      "applicationUrl": "https://localhost:7257;http://localhost:5257",
+      "applicationUrl": "http://localhost:7257;http://localhost:5257",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
