--- a/TodoApi/TodoApi/Properties/launchSettings.json
+++ b/TodoApi/TodoApi/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/todoitems",
+      "launchUrl": "api/mymodels",
       "applicationUrl": "http://localhost:7257;http://localhost:5257",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/todoitems",
+      "launchUrl": "api/mymodels",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
